# Riemann-Hypothesis

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
PROMPT/: 0.md  1.目標.md  2.「第1零点を証明した」の注意点.md  3.次の方針.md
artifacts/: blocked-jobs.json  covering-failed.json  covering-plan.json  events.jsonl
blueprint/: claims.json
blueprint/certificates/: demo-interval-v1.json
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: lib.rs
crates/claim-ir/: Cargo.toml
crates/claim-ir/src/: lib.rs
crates/lean-verifier/: Cargo.toml
crates/lean-verifier/src/: lib.rs
crates/numeric-certificates/: Cargo.toml
crates/numeric-certificates/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: main.rs  registry.rs  selftest.rs  state.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
docs/: benchmark-v0.1.md  gamma-campaign.md  milestone-v0.2-inventory.json  milestone-v0.2.md  research-log.md  security-model.md  upstreaming.md  zero-counting-campaign.md
environments/: environment-digest.txt  flint-version.txt  lake-manifest.json  rocq-version.txt  rocq.opam.locked
lean/: RH.lean  lakefile.toml
lean/RH/: BallInv.lean  BisectXA.lean  BisectXB.lean  BisectXC.lean  BisectXD.lean  MasterSphereProto.lean  ProfCoeff.lean
lean/RH/Equivalences/: Promoted_0016867beed9.lean  Promoted_00184f5e8eb0.lean  Promoted_002877201152.lean  Promoted_004d6d2ab831.lean  Promoted_009aa3cb930f.lean  Promoted_009bb4649558.lean  Promoted_00d80afb4456.lean  Promoted_00e815368889.lean  Promoted_00ff7680876c.lean  Promoted_010e4367d475.lean  Promoted_01198cd951c4.lean  Promoted_01219d39cdc7.lean  Promoted_0133726387b7.lean  Promoted_013440f98217.lean  Promoted_013611dc9d5c.lean  Promoted_01365297b5d4.lean  Promoted_013b2917d2ca.lean  Promoted_01438242a004.lean  Promoted_016e14daf58b.lean  Promoted_0189391cc6ff.lean  Promoted_018b1eecc5d2.lean  Promoted_01a0abf3b1f0.lean  Promoted_01a8d18b9411.lean  Promoted_01d9d155dd5e.lean  Promoted_01fb4fca9245.lean  Promoted_02311e90b560.lean  Promoted_027cded4955e.lean  Promoted_02b5ef98059f.lean  Promoted_02ca995b57b9.lean  Promoted_02f5055e48c2.lean  Promoted_02f6fa23e340.lean  Promoted_0306748b290e.lean  Promoted_035ff6cc3730.lean  Promoted_036521216178.lean  Promoted_03a75f15d7b4.lean  Promoted_03b2e9f29057.lean  Promoted_03b33259017a.lean  Promoted_03b3b308cb57.lean  Promoted_03c2b7ea9cf7.lean  (+2046 more)
prolog/: dependencies.pl  failure_rules.pl  planner.pl  strategies.pl
prolog/tests/: planner_tests.pl
python/lean_sidecar/: pyproject.toml
python/lean_sidecar/lean_sidecar/: main.py
rocq/RHAudit/: README.md
schemas/: certificate-v1.json  claim-ir-v1.json  proof-event-v1.json
scripts/: assemble_blocks.py  plan_covering.py  plan_region.py  run_covering.py
(+8 files in other folders)
