[workspace]
resolver = "2"
members = [
    "crates/claim-ir",
    "crates/protocol",
    "crates/artifact-store",
    "crates/lean-verifier",
    "crates/numeric-certificates",
    "crates/scheduler",
    "crates/orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tempfile = "3"

claim-ir = { path = "crates/claim-ir" }
protocol = { path = "crates/protocol" }
artifact-store = { path = "crates/artifact-store" }
lean-verifier = { path = "crates/lean-verifier" }
numeric-certificates = { path = "crates/numeric-certificates" }
scheduler = { path = "crates/scheduler" }
